# mug

./: .gitignore  .mugignore  BEAUTIFUL_OUTPUT.md  BEAUTIFUL_OUTPUT_INDEX.md  BEAUTIFUL_OUTPUT_START_HERE.md  BEAUTIFUL_OUTPUT_SUMMARY.md  CHANGES.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  COMPLETE_FINAL_SUMMARY.md  COMPLETION_STATUS.txt  COMPRESSION_ARCHITECTURE.md  Cargo.toml  DELIVERY_SUMMARY.md  DOCS.md  ERROR_HANDLING.md  FEATURES_IMPLEMENTED.md  FEATURE_PROPOSALS_SUMMARY.md  FEATURE_SUMMARY.md  FINAL_BEAUTIFUL_OUTPUT.md  FINAL_SUMMARY.md  FORMATTER_INTEGRATION.md  FORMATTER_INTEGRATION_COMPLETE.md  FORMATTER_QUICK_REFERENCE.md  FUTURE_FEATURES_README.md  HYBRID_VCS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.txt  INTERACTIVE_BRANCHES.md  INTERACTIVE_BRANCHES_FINAL.md  INTERACTIVE_FEATURE_COMPLETE.md  JJ_INSPIRED_FEATURES.md  LICENSE  MIGRATE_EXAMPLES.md  MIGRATION_COMPLETE.md  (+17 more)
.github/workflows/: rust.yml
examples/: formatter_demo.rs
src/: attributes.rs  auth.rs  bisect.rs  branch.rs  cherry_pick.rs  client.rs  commands.rs  commit.rs  config.rs  database.rs  diff.rs  error.rs  hash.rs  hooks.rs  ignore.rs  index.rs  lib.rs  main.rs  merge.rs  protocol.rs  remote.rs  repo.rs  reset.rs  server.rs  stash.rs  status.rs  store.rs  sync.rs  tag.rs
src/clone/: mod.rs  parallel.rs
src/commands/: commands.rs
src/core/: attributes.rs  auth.rs  bisect.rs  branch.rs  cherry_pick.rs  commit.rs  commit_editor.rs  config.rs  crypto.rs  (+25 more)
(+22 files in other folders)
