[package]
name = "mug"
version = "1.0.0-alpha.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
sled = "0.34"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
similar = "2.5"
tempfile = "3.11"
rayon = "1.10"
regex = "1.11"
actix-web = "4.10"
actix-rt = "2.10"
tokio = { version = "1.41", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
bytes = "1.8"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ratatui = "0.27"
crossterm = "0.28"
flate2 = "1.0"
zstd = "0.13"
ed25519-dalek = "2.1"
base64 = "0.22"
rand = "0.8"
gix = "0.64"
num_cpus = "1.16"


